changed the configmap to have the namesapce definition

--- a/sample-config-map.yaml
+++ b/sample-config-map.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
+namespace: gitops
 metadata:
-  name: gitops-test
+  name: are you available
 data:
   index.html: Hello GitOps !!
